<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_bg_4dp"
    android:orientation="vertical"
    android:paddingBottom="3dp">

    <LinearLayout
        android:id="@+id/comm_dialog_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/comm_dialog_title"
            style="@style/dialog_center_title_style"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dd_dp20"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/comm_dialog_portrait"
                android:src="@drawable/user_avatar"
                android:layout_width="@dimen/dd_dp50"
                android:layout_height="@dimen/dd_dp50"
                android:layout_margin="@dimen/dd_dp10"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/comm_dialog_desc"
                style="@style/dialog_center_title_style"
                android:gravity="center_vertical"
                android:layout_margin="0dp"
                android:textSize="@dimen/dd_dp14"
                tools:ignore="SpUsage" />
        </LinearLayout>

        <View android:id="@+id/comm_dialog_share_type_line"
            style="@style/item_line"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/comm_dialog_share_type_tv"
            style="@style/dialog_center_title_style"
            android:layout_margin="@dimen/dd_dp20"
            android:textSize="@dimen/dd_dp14"
            tools:ignore="SpUsage"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/comm_dialog_search_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/comm_dialog_search_title_tv"
            style="@style/dialog_center_title_style"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/comm_dialog_search_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dd_dp80"
            android:layout_gravity="center"
            android:background="@null"
            android:gravity="left"
            android:layout_marginRight="@dimen/dd_dp24"
            android:layout_marginLeft="@dimen/dd_dp24"
            android:layout_marginTop="@dimen/dd_dp24"
            android:layout_marginBottom="5dp"
            android:hint="@string/please_input_apply_content"
            android:inputType="textMultiLine"
            android:maxLength="50"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/text_blue_pressed"
            android:textSize="@dimen/dd_dp16"
            tools:ignore="RtlHardcoded,SpUsage" />


        <TextView
            android:id="@+id/comm_dialog_search_input_text_count_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0/50字"
            android:gravity="right"
            android:layout_marginRight="@dimen/dd_dp8"
            android:layout_marginTop="@dimen/dd_dp3"
            android:layout_marginBottom="@dimen/dd_dp3"
            android:textColor="@color/text_blue_pressed"
            android:textSize="@dimen/dd_dp12"
            tools:ignore="RtlHardcoded,SpUsage" />

        <View style="@style/item_line"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dd_dp44">
        <View
            android:id="@+id/center_line"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@color/color_efeff4"/>

        <TextView
            android:id="@+id/comm_dialog_cancel"
            style="@style/dialog_btn"
            android:layout_toLeftOf="@+id/center_line"
            android:text="@string/share_dialog_cancel"/>

        <TextView
            android:id="@+id/comm_dialog_ok"
            style="@style/dialog_btn"
            android:layout_toRightOf="@+id/center_line"
            android:text="@string/confirm"
            android:textColor="@color/color_5495e8"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_efeff4"/>
    </RelativeLayout>
</LinearLayout>
